fix: Value overflow css

--- a/src/frontend/styles/components/calltrace.styl
+++ b/src/frontend/styles/components/calltrace.styl
@@ -649,7 +649,7 @@
   flex-direction: column
 
 .value-expanded
-  width: 100%
+  width: calc(100% - 10px)
   display: flex
   flex-direction: column
   overflow: visible /*hidden*/
